# router-rs

./: Cargo.toml  README.md
benches/: benchmark.rs
old/: route.rs  segments.rs
router/: Cargo.toml
router-app/: Cargo.toml
router-app/examples/: app.rs
router-app/src/: body.rs  context.rs  error.rs  lib.rs
router-cache/: Cargo.toml
router-cache/src/: config.rs  lib.rs  middleware.rs  util.rs
router-cookies/: Cargo.toml
router-cookies/src/: bindings.rs  cookie_jar.rs  lib.rs  modifier.rs  module.rs  private.rs
router-session/: Cargo.toml
router-session/src/: lib.rs  modifier.rs  module.rs  session.rs  session_store.rs
router/examples/: router.rs
router/src/: body.rs  error.rs  func.rs  handler.rs  handler_fn.rs  into_response.rs  lib.rs  middleware.rs  middleware_fn.rs  modifier.rs  router.rs  service_ext.rs  traits.rs
routing/: Cargo.toml
routing/benches/: benchmark.rs
routing/src/: arena.rs  lib.rs  matcher.rs  params.rs  parser.rs  path_router.rs  router.rs  segment.rs  segments.rs
src/: http_ext.rs  lib.rs  matcher.rs  params.rs  parser.rs  parser2.rs  parser3.rs  route.rs  router.rs  segment.rs  segments.rs
uhuh-container/: Cargo.toml
uhuh-container/src/: extensions.rs  lib.rs  modules.rs
wilbur-app/: Cargo.toml
wilbur-app/examples/: wilbur-app.rs
wilbur-app/src/: app.rs  body.rs  context.rs  error.rs  lib.rs
wilbur-cache/: Cargo.toml
wilbur-cache/src/: lib.rs  middleware.rs
wilbur-container/: Cargo.toml
wilbur-container/src/: container.rs  extensions.rs  modules.rs
wilbur-cookies/: Cargo.toml
wilbur-cookies/src/: cookie_jar.rs  lib.rs  modifier.rs  module.rs  signed.rs
wilbur-core/: Cargo.toml
wilbur-core/src/: body.rs  error.rs  from_request.rs  handler.rs  handler_fn.rs  into_response.rs  lib.rs  middleware.rs  middleware_fn.rs  modifier.rs
wilbur-quick/: Cargo.toml
wilbur-quick/examples/: app.js  quick.rs
wilbur-quick/src/: app.rs  augment.rs  builder.rs  context.rs  lib.rs  router.rs
wilbur-routing/: Cargo.toml
wilbur-routing/src/: boxed.rs  container.rs  error.rs  lib.rs  params.rs  router.rs  routing.rs  service.rs
wilbur-session/: Cargo.toml
wilbur-session/src/: bindings.rs  lib.rs  modifier.rs  module.rs  session.rs
