[workspace]

resolver = "2"

members = [
    "router",
    "router-app",
    "router-cookies",
    "router-session",
    "routing",
    "uhuh-container",
]


[workspace.dependencies]
http = { version = "1" }
serde = { version = "1", features = ["derive"] }
heather = { git = "https://github.com/kildevaeld/heather", features = [
    "std",
    "alloc",
] }
tracing = { version = "0.1" }
