[package]
name = "router-session"
version = "0.1.0"
edition = "2024"

[dependencies]
keyval = { git = "https://github.com/kildevaeld/keyval-rs", features = [
    "cbor",
] }
uuid = { version = "1", features = ["v4"] }
arc-swap = "1"
router-cookies = { path = "../router-cookies", features = ["signed"] }

serde.workspace = true
http.workspace = true
heather.workspace = true
router = { path = "../router" }

vaerdi = { git = "https://github.com/kildevaeld/vaerdi-rs", features = [
    "serde",
] }
uhuh-container = { path = "../uhuh-container" }
