[package]
name = "router"
version = "0.1.0"
edition = "2024"

[features]
default = []
send = ["heather/send"]
hyper = ["dep:hyper"]
tower = ["dep:tower", "dep:tower-util"]

[dependencies]
routing = { path = "../routing", features = ["std", "router"] }
tower = { version = "0.5", optional = true }
tower-util = { version = "0.3", optional = true }
http = { version = "1" }

bitflags = { version = "2" }
futures = { version = "0.3", default-features = false }
heather = { git = "https://github.com/kildevaeld/heather", features = [
  "std",
  "alloc",
] }
pin-project-lite = { version = "0.2" }

reggie = { git = "https://github.com/fairy-render/reggie" }
uhuh-container = { path = "../uhuh-container" }

hyper = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["net", "macros", "rt"] }
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[[example]]
name = "router"
path = "examples/router.rs"
required-features = ["hyper"]
