[package]
edition = "2018"
name = "routing"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std", "router"]
std = ["id-arena/std", "udled/std"]
router = ["bitflags", "http"]

[dependencies]
id-arena = { version = "2", default-features = false }
udled = { version = "0.3" }
udled-tokenizers = { version = "0.2" }

bitflags = { version = "2", optional = true }
http = { version = "1", optional = true }


[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "benchmark"
