[package]
name = "wilbur-app"
version = "0.1.0"
edition = "2024"

[features]
send = ["heather/send"]
serve = ["tokio", "hyper-util", "hyper"]
hyper = ["dep:hyper"]

[dependencies]
wilbur-routing = { path = "../wilbur-routing", features = ["hyper"] }
wilbur-container = { path = "../wilbur-container" }
wilbur-core = { path = "../wilbur-core" }
heather.workspace = true

http.workspace = true
http-body.workspace = true
http-body-util.workspace = true

futures-core = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }


tokio = { version = "1", features = ["net", "rt"], optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["net", "rt", "macros"] }


[[example]]
name = "wilbur-app"
path = "examples/wilbur-app.rs"
required-features = ["serve"]
