[package]
name = "wilbur-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
wilbur-core = { path = "../wilbur-core" }
serde.workspace = true
http-serde = { version = "2" }
headers.workspace = true

heather.workspace = true
bytes = { workspace = true, features = ["serde"] }

keyval = { git = "https://github.com/kildevaeld/keyval-rs", features = [
    "cbor",
] }
