[package]
name = "wilbur-quick"
version = "0.1.0"
edition = "2024"

[features]
default = ["serve", "send"]
send = ["klaver?/pool"]
serve = ["tokio", "hyper-util", "hyper"]
hyper = ["dep:hyper", "klaver"]

[dependencies]
wilbur-core = { path = "../wilbur-core" }
wilbur-routing = { path = "../wilbur-routing" }
wilbur-container = { path = "../wilbur-container" }
wilbur-cache = { path = "../wilbur-cache", optional = true }
wilbur-cookies = { path = "../wilbur-cookies", optional = true }
wilbur-session = { path = "../wilbur-session", optional = true }

rquickjs = { version = "0.8" }
rquickjs-modules = { git = "https://github.com/fairy-render/klaver" }
rquickjs-util = { git = "https://github.com/fairy-render/klaver" }
klaver-wintercg = { git = "https://github.com/fairy-render/klaver", default-features = false, features = [
  "http",
] }

reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }

http.workspace = true
http-body.workspace = true
http-body-util.workspace = true

routing = { path = "../routing", features = ["router"] }
heather.workspace = true

tokio = { version = "1", features = ["net", "rt"], optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
klaver = { git = "https://github.com/fairy-render/klaver", optional = true }
futures = { version = "0.3" }


[dev-dependencies]
hyper-util = { version = "0.1", features = ["full"] }
klaver = { git = "https://github.com/fairy-render/klaver" }
wilbur-cookies = { path = "../wilbur-cookies" }
futures = { version = "0.3" }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["server", "http1"] }
reggie = { git = "https://github.com/fairy-render/reggie", features = ["json"] }
color-eyre = { version = "*" }
