[package]
name = "wilbur-routing"
version = "0.1.0"
edition = "2024"

[features]
default = ["hyper", "tower"]
tower = ["dep:tower", "dep:tower-util"]
hyper = ["dep:hyper"]

[dependencies]
routing = { path = "../routing", features = ["router", "std"] }
wilbur-core = { path = "../wilbur-core" }
heather.workspace = true

hyper = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
tower-util = { version = "0.3", optional = true }
